--- a/index.html
+++ b/index.html
@@ -5,179 +5,180 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>Retrospect by TEMPLATED</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<body class="landing">
 
-		<!-- Header -->
-			<header id="header" class="alt">
-				<!-- <h1><a href="index.html">Retrospect</a></h1> -->
-				<a href="#nav">Menu</a>
-			</header>
+<head>
+	<title>Mervyn Greene Engineering</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+</head>
 
-		<!-- Nav -->
-			<nav id="nav">
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
-				</ul>
-			</nav>
+<body class="landing">
 
-		<!-- Banner -->
-			<section id="banner">
-				<!-- <i class="icon fa-diamond"></i> -->
-				<h2>Mervyn Greene Engineering</h2>
-				<p>Structural Steel<br>Fuel Tank Stands<br>Custom Solutions</p>
-				<ul class="actions">
-					<!-- <li><a href="#" class="button big special">Learn More</a></li> -->
-				</ul>
-			</section>
+	<!-- Header -->
+	<header id="header" class="alt">
+		<!-- <h1><a href="index.html">Retrospect</a></h1> -->
+		<a href="#nav">Menu</a>
+	</header>
 
-		<!-- One -->
-			<section id="one" class="wrapper style1">
-				<div class="inner">
-					<article class="feature left">
-						<span class="image"><img src="images/Industrial.png" alt="" /></span>
-						<div class="content">
-							<h2>Industrial</h2>
-							<p>Design, supply and erection of Industrial Buildings. We start with the structual steel and go the whole way to completion with roofing, cladding and flashings.</p>
-							<ul class="actions">
-								<li>
-									<a href="#" class="button alt">More</a>
-								</li>
-							</ul>
-						</div>
-					</article>
-					<article class="feature right">
-						<span class="image"><img src="images/Mervyn_Greene_Product_Shoot_March_2017-26 copy.jpg" alt="" /></span>
-						<div class="content">
-							<h2>Fuel Tank Stands</h2>
-							<p>MGE developed Fuel Tank Stands for diesel tanks, domestic oil tanks and also build based on your requirements. All tank stands are galvanised and include fittings and necessary equiptment. Our tank stands are used in farm yards, construction sites, machinery yards and domestically. Slide out stairs ensure safety and ease of access.
-								<br>
-								<br>
-								We make stands to cater for one, two or three diesel tanks.
-								Delivery or collection are available.
-								Stands can be made for your specific tank and height requirements. Call us to discuss your best option.
-								</p>
-								<p>
-								<br>
-								This product was featured in the <a class="w3-large w3-text-green" href="https://www.independent.ie/business/farming/fuel-tank-stand-tops-tullamore-26764445.html">Irish Independent</a> and the Irish Farmers Journal after winning awards for innovation and safety.</p> 
-								<p>A video of the fuel tank stand in action can be seen 
-								<a href="https://www.youtube.com/watch?v=nKHeRURSIUY"> here.</a>
-							</p>							<ul class="actions">
-								<li>
-									<a href="#" class="button alt">More</a>
-								</li>
-							</ul>
-						</div>
-					</article>
-				</div>
-			</section>
+	<!-- Nav -->
+	<nav id="nav">
+		<ul class="links">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="generic.html">Generic</a></li>
+			<li><a href="elements.html">Elements</a></li>
+		</ul>
+	</nav>
 
-		<!-- Two -->
-			<section id="two" class="wrapper special">
-				<div class="inner">
-					<header class="major narrow">
-						<h2>Aliquam Blandit Mauris</h2>
-						<p>Ipsum dolor tempus commodo turpis adipiscing Tempor placerat sed amet accumsan</p>
-					</header>
-					<div class="image-grid">
-						<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic10.jpg" alt="" /></a>
-					</div>
+	<!-- Banner -->
+	<section id="banner">
+		<!-- <i class="icon fa-diamond"></i> -->
+		<h2>Mervyn Greene Engineering</h2>
+		<p>Structural Steel<br>Fuel Tank Stands<br>Custom Solutions</p>
+		<ul class="actions">
+			<!-- <li><a href="#" class="button big special">Learn More</a></li> -->
+		</ul>
+	</section>
+
+	<!-- One -->
+	<section id="one" class="wrapper style1">
+		<div class="inner">
+			<article class="feature left">
+				<span class="image"><img src="images/Industrial.png" alt="" /></span>
+				<div class="content">
+					<h2>Industrial</h2>
+					<p>Design, supply and erection of Industrial Buildings. We start with the structual steel and go the
+						whole way to completion with roofing, cladding and flashings.</p>
 					<ul class="actions">
-						<li><a href="#" class="button big alt">Tempus Aliquam</a></li>
+						<li>
+							<a href="#" class="button alt">More</a>
+						</li>
 					</ul>
 				</div>
-			</section>
-
-		<!-- Three -->
-			<section id="three" class="wrapper style3 special">
-				<div class="inner">
-					<header class="major narrow	">
-						<h2>Magna sed consequat tempus</h2>
-						<p>Ipsum dolor tempus commodo turpis adipiscing Tempor placerat sed amet accumsan</p>
-					</header>
-					<ul class="actions">
-						<li><a href="#" class="button big alt">Magna feugiat</a></li>
-					</ul>
-				</div>
-			</section>
-
-		<!-- Four -->
-			<section id="four" class="wrapper style2 special">
-				<div class="inner">
-					<header class="major narrow">
-						<h2>Get in touch</h2>
-						<p>Ipsum dolor tempus commodo adipiscing</p>
-					</header>
-					<form action="#" method="POST">
-						<div class="container 75%">
-							<div class="row uniform 50%">
-								<div class="6u 12u$(xsmall)">
-									<input name="name" placeholder="Name" type="text" />
-								</div>
-								<div class="6u$ 12u$(xsmall)">
-									<input name="email" placeholder="Email" type="email" />
-								</div>
-								<div class="12u$">
-									<textarea name="message" placeholder="Message" rows="4"></textarea>
-								</div>
-							</div>
-						</div>
-						<ul class="actions">
-							<li><input type="submit" class="special" value="Submit" /></li>
-							<li><input type="reset" class="alt" value="Reset" /></li>
+			</article>
+			<article class="feature right">
+				<span class="image"><img src="images/Mervyn_Greene_Product_Shoot_March_2017-26 copy.jpg"
+						alt="" /></span>
+				<div class="content">
+					<h2>Fuel Tank Stands</h2>
+						<ul>
+							<li>Full Service Units</li>
+							<li>Diesel Tanks</li>
+							<li>Domestic Tanks</li>
+							<li>Custom Specification</li>
 						</ul>
-					</form>
-				</div>
-			</section>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<ul class="icons">
-						<li><a href="#" class="icon fa-facebook">
-							<span class="label">Facebook</span>
-						</a></li>
-						<li><a href="#" class="icon fa-twitter">
-							<span class="label">Twitter</span>
-						</a></li>
-						<li><a href="#" class="icon fa-instagram">
-							<span class="label">Instagram</span>
-						</a></li>
-						<li><a href="#" class="icon fa-linkedin">
-							<span class="label">LinkedIn</span>
-						</a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled.</li>
-						<li>Images: <a href="http://unsplash.com">Unsplash</a>.</li>
-						<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
+					</p>
+				
+					<ul class="actions">
+						<li>
+							<a href="fuelTankStands.html" class="button alt">Fuel Tank Stands</a>
+						</li>
 					</ul>
 				</div>
-			</footer>
+			</article>
+		</div>
+	</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+	<!-- Two -->
+	<section id="two" class="wrapper special">
+		<div class="inner">
+			<header class="major narrow">
+				<h2>Aliquam Blandit Mauris</h2>
+				<p>Ipsum dolor tempus commodo turpis adipiscing Tempor placerat sed amet accumsan</p>
+			</header>
+			<div class="image-grid">
+				<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+				<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+				<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+				<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+				<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+				<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
+				<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
+				<a href="#" class="image"><img src="images/pic10.jpg" alt="" /></a>
+			</div>
+			<ul class="actions">
+				<li><a href="#" class="button big alt">Tempus Aliquam</a></li>
+			</ul>
+		</div>
+	</section>
 
-	</body>
+	<!-- Three -->
+	<section id="three" class="wrapper style3 special">
+		<div class="inner">
+			<header class="major narrow	">
+				<h2>Magna sed consequat tempus</h2>
+				<p>Ipsum dolor tempus commodo turpis adipiscing Tempor placerat sed amet accumsan</p>
+			</header>
+			<ul class="actions">
+				<li><a href="#" class="button big alt">Magna feugiat</a></li>
+			</ul>
+		</div>
+	</section>
+
+	<!-- Four -->
+	<section id="four" class="wrapper style2 special">
+		<div class="inner">
+			<header class="major narrow">
+				<h2>Get in touch</h2>
+				<p>Ipsum dolor tempus commodo adipiscing</p>
+			</header>
+			<form action="#" method="POST">
+				<div class="container 75%">
+					<div class="row uniform 50%">
+						<div class="6u 12u$(xsmall)">
+							<input name="name" placeholder="Name" type="text" />
+						</div>
+						<div class="6u$ 12u$(xsmall)">
+							<input name="email" placeholder="Email" type="email" />
+						</div>
+						<div class="12u$">
+							<textarea name="message" placeholder="Message" rows="4"></textarea>
+						</div>
+					</div>
+				</div>
+				<ul class="actions">
+					<li><input type="submit" class="special" value="Submit" /></li>
+					<li><input type="reset" class="alt" value="Reset" /></li>
+				</ul>
+			</form>
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="inner">
+			<ul class="icons">
+				<li><a href="#" class="icon fa-facebook">
+						<span class="label">Facebook</span>
+					</a></li>
+				<li><a href="#" class="icon fa-twitter">
+						<span class="label">Twitter</span>
+					</a></li>
+				<li><a href="#" class="icon fa-instagram">
+						<span class="label">Instagram</span>
+					</a></li>
+				<li><a href="#" class="icon fa-linkedin">
+						<span class="label">LinkedIn</span>
+					</a></li>
+			</ul>
+			<ul class="copyright">
+				<li>&copy; Untitled.</li>
+				<li>Images: <a href="http://unsplash.com">Unsplash</a>.</li>
+				<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
+			</ul>
+		</div>
+	</footer>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
