Finito for now.

--- a/index.html
+++ b/index.html
@@ -43,9 +43,30 @@
 		</ul>
 	</section>
 
-	<!-- One -->
+	<!-- Section -->
+<!-- 
+	<div class="inner">
+	<header class="major narrow">
+		<p>Mervyn Greene Engineering have been in business for almost 30 years. We work on all aspects of steel work - from
+		the design stage, all the way through to erection of the finished product.
+		Our fabrication is done in house by MGE employees to ensure of the highest standard.<br><br>
+		We conform to CE marking regulations 1090-1:2009+A1:2011. MGE Products, Multi-Safe Tank Stands, Structural Steel
+		Manufacturing and Factory Processes are also CE certified.
+		<br>
+		We have built relationships with our suppliers over many years, this helps us use the best materials and
+		fabrication processes.
+		<br><br>
+		We work with you to create custom solutions for whatever you need. Our customers range from private households
+		to large construction firms.</p>
+	</header>
+</div> -->
+
+<!-- Section -->
+
+
 	<section id="one" class="wrapper style1">
 		<div class="inner">
+
 			<article class="feature left">
 				<span class="image"><img src="images/Industrial.png" alt="" /></span>
 				<div class="content">
@@ -54,7 +75,7 @@
 						whole way to completion with roofing, cladding and flashings.</p>
 					<ul class="actions">
 						<li>
-							<a href="#" class="button alt">More</a>
+							<a href="#" class="button alt">Industrial Projects</a>
 						</li>
 					</ul>
 				</div>
@@ -64,14 +85,14 @@
 						alt="" /></span>
 				<div class="content">
 					<h2>Fuel Tank Stands</h2>
-						<ul>
-							<li>Full Service Units</li>
-							<li>Diesel Tanks</li>
-							<li>Domestic Tanks</li>
-							<li>Custom Specification</li>
-						</ul>
+					<ul>
+						<li>Full Service Units</li>
+						<li>Diesel Tank Stands</li>
+						<li>Domestic Tank Stands</li>
+						<li>Custom Specification</li>
+					</ul>
 					</p>
-				
+
 					<ul class="actions">
 						<li>
 							<a href="fuelTankStands.html" class="button alt">Fuel Tank Stands</a>
@@ -109,17 +130,23 @@
 	<section id="three" class="wrapper style3 special">
 		<div class="inner">
 			<header class="major narrow	">
-				<h2>Magna sed consequat tempus</h2>
-				<p>Ipsum dolor tempus commodo turpis adipiscing Tempor placerat sed amet accumsan</p>
-			</header>
-			<ul class="actions">
-				<li><a href="#" class="button big alt">Magna feugiat</a></li>
-			</ul>
+				<p>Mervyn Greene Engineering have been in business for almost 30 years. We work on all aspects of steel work - from
+					the design stage, all the way through to erection of the finished product.
+					Our fabrication is done in house by MGE employees to ensure of the highest standard.<br><br>
+					We conform to CE marking regulations 1090-1:2009+A1:2011. MGE Products, Multi-Safe Tank Stands, Structural Steel
+					Manufacturing and Factory Processes are also CE certified.
+					<br>
+					We have built relationships with our suppliers over many years, this helps us use the best materials and
+					fabrication processes.
+					<br><br>
+					We work with you to create custom solutions for whatever you need. Our customers range from private households
+					to large construction firms.</p>		
+				</header>
 		</div>
 	</section>
 
 	<!-- Four -->
-	<section id="four" class="wrapper style2 special">
+	<!-- <section id="four" class="wrapper style2 special">
 		<div class="inner">
 			<header class="major narrow">
 				<h2>Get in touch</h2>
@@ -145,7 +172,7 @@
 				</ul>
 			</form>
 		</div>
-	</section>
+	</section> -->
 
 	<!-- Footer -->
 	<footer id="footer">
@@ -154,20 +181,11 @@
 				<li><a href="#" class="icon fa-facebook">
 						<span class="label">Facebook</span>
 					</a></li>
-				<li><a href="#" class="icon fa-twitter">
-						<span class="label">Twitter</span>
-					</a></li>
-				<li><a href="#" class="icon fa-instagram">
-						<span class="label">Instagram</span>
-					</a></li>
-				<li><a href="#" class="icon fa-linkedin">
-						<span class="label">LinkedIn</span>
-					</a></li>
 			</ul>
 			<ul class="copyright">
-				<li>&copy; Untitled.</li>
-				<li>Images: <a href="http://unsplash.com">Unsplash</a>.</li>
-				<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
+				<li>&copy; Mervyn Greene Engineering 2020</li>
+				<!-- <li>Images: <a href="http://unsplash.com">Unsplash</a>.</li> -->
+				<!-- <li>Design: <a href="http://templated.co">TEMPLATED</a>.</li> -->
 			</ul>
 		</div>
 	</footer>
