--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 	<!-- Nav -->
 	<nav id="nav">
 		<ul class="links">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="generic.html">Generic</a></li>
-			<li><a href="elements.html">Elements</a></li>
+			<li><a href="index.html">Mervyn Greene Engineering</a></li>
+			<li><a href="fuelTankStands.html.html">Fuel Tank Stands</a></li>
+			<!-- <li><a href="elements.html">Elements</a></li> -->
 		</ul>
 	</nav>
 
@@ -44,7 +44,7 @@
 	</section>
 
 	<!-- Section -->
-<!-- 
+	<!-- 
 	<div class="inner">
 	<header class="major narrow">
 		<p>Mervyn Greene Engineering have been in business for almost 30 years. We work on all aspects of steel work - from
@@ -61,7 +61,7 @@
 	</header>
 </div> -->
 
-<!-- Section -->
+	<!-- Section -->
 
 
 	<section id="one" class="wrapper style1">
@@ -100,6 +100,27 @@
 					</ul>
 				</div>
 			</article>
+
+
+			<article class="feature left">
+				<span class="image"><img src="images/Industrial.png" alt="" /></span>
+				<div class="content">
+					<h2>Safety Products</h2>
+					<ul>
+						<li>Walkways & Footbridges</li>
+						<li>Railings</li>
+						<li>Stairs</li>
+						<li>Ladders</li>
+						<li>Guards</li>
+					</ul>
+					<ul class="actions">
+						<li>
+							<a href="" class="button alt">Safety Products</a>
+						</li>
+					</ul>
+				</div>
+			</article>
+
 		</div>
 	</section>
 
@@ -107,8 +128,17 @@
 	<section id="two" class="wrapper special">
 		<div class="inner">
 			<header class="major narrow">
-				<h2>Aliquam Blandit Mauris</h2>
-				<p>Ipsum dolor tempus commodo turpis adipiscing Tempor placerat sed amet accumsan</p>
+				<h2>Contact:</h2>
+				<p font-family="Ariel">
+					Office: <br>+353436687690<br><br>
+					Mobile:<br> +353868199646<br><br>
+					mgreeneeng@gmail.com
+					<br><br>
+					Mervyn Greene Engineering,<br>
+					Teemore Industrial Estate, <br>
+					Granard,<br>
+					Co. Longford.<br>
+				</p>
 			</header>
 			<div class="image-grid">
 				<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
@@ -120,9 +150,6 @@
 				<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
 				<a href="#" class="image"><img src="images/pic10.jpg" alt="" /></a>
 			</div>
-			<ul class="actions">
-				<li><a href="#" class="button big alt">Tempus Aliquam</a></li>
-			</ul>
 		</div>
 	</section>
 
@@ -130,18 +157,22 @@
 	<section id="three" class="wrapper style3 special">
 		<div class="inner">
 			<header class="major narrow	">
-				<p>Mervyn Greene Engineering have been in business for almost 30 years. We work on all aspects of steel work - from
+				<p font-family="Ariel">Mervyn Greene Engineering have been in business for almost 30 years. We work on all aspects of steel
+					work - from
 					the design stage, all the way through to erection of the finished product.
 					Our fabrication is done in house by MGE employees to ensure of the highest standard.<br><br>
-					We conform to CE marking regulations 1090-1:2009+A1:2011. MGE Products, Multi-Safe Tank Stands, Structural Steel
+					We conform to CE marking regulations 1090-1:2009+A1:2011. MGE Products, Multi-Safe Tank Stands,
+					Structural Steel
 					Manufacturing and Factory Processes are also CE certified.
 					<br>
-					We have built relationships with our suppliers over many years, this helps us use the best materials and
+					We have built relationships with our suppliers over many years, this helps us use the best materials
+					and
 					fabrication processes.
 					<br><br>
-					We work with you to create custom solutions for whatever you need. Our customers range from private households
-					to large construction firms.</p>		
-				</header>
+					We work with you to create custom solutions for whatever you need. Our customers range from private
+					households
+					to large construction firms.</p>
+			</header>
 		</div>
 	</section>
 
