--- a/index.html
+++ b/index.html
@@ -67,19 +67,7 @@
 	<section id="one" class="wrapper style1">
 		<div class="inner">
 
-			<article class="feature left">
-				<span class="image"><img src="images/Industrial.png" alt="" /></span>
-				<div class="content">
-					<h2>Industrial</h2>
-					<p>Design, supply and erection of Industrial Buildings. We start with the structual steel and go the
-						whole way to completion with roofing, cladding and flashings.</p>
-					<ul class="actions">
-						<li>
-							<a href="#" class="button alt">Industrial Projects</a>
-						</li>
-					</ul>
-				</div>
-			</article>
+
 			<article class="feature right">
 				<span class="image"><img src="images/Mervyn_Greene_Product_Shoot_March_2017-26 copy.jpg"
 						alt="" /></span>
@@ -108,10 +96,8 @@
 					<h2>Safety Products</h2>
 					<ul>
 						<li>Walkways & Footbridges</li>
-						<li>Railings</li>
-						<li>Stairs</li>
-						<li>Ladders</li>
-						<li>Guards</li>
+						<li>Railings/Guards</li>
+						<li>Stairs/Ladders</li>
 						<li>Custom Solutions</li>
 					</ul>
 					<ul class="actions">
@@ -119,6 +105,29 @@
 							<a href="safetyProducts.html" class="button alt">Safety Products</a>
 						</li>
 					</ul>
+				</div>
+			</article>
+
+			<article class="feature right">
+				<span class="image"><img src="images/Industrial.png" alt="" /></span>
+				<div class="content">
+					<h2>Industrial</h2>
+					<p>Design, supply and erection of Industrial Buildings. We start with the structual steel and go the
+						whole way to completion with roofing, cladding and flashings.</p>
+					<!-- <ul class="actions">
+						<li>
+							<a href="#" class="button alt">Industrial Projects</a>
+						</li>
+					</ul> -->
+				</div>
+			</article>
+
+			<article class="feature left">
+				<span class="image"><img src="images/IMG_1895.JPG" alt="" /></span>
+				<div class="content">
+					<h2>Structural Steel</h2>
+					<p>Supply and fit of Structural Steel for construction projects. Our beams have been used
+						in extensions, for supporting existing structures and for fresh builds.</p>
 				</div>
 			</article>
 
@@ -141,16 +150,6 @@
 					Co. Longford.<br>
 				</p>
 			</header>
-			<div class="image-grid">
-				<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-				<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-				<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-				<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-				<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-				<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-				<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-				<a href="#" class="image"><img src="images/pic10.jpg" alt="" /></a>
-			</div>
 		</div>
 	</section>
 
@@ -158,7 +157,8 @@
 	<section id="three" class="wrapper style3 special">
 		<div class="inner">
 			<header class="major narrow	">
-				<p font-family="Ariel">Mervyn Greene Engineering have been in business for almost 30 years. We work on all aspects of steel
+				<p font-family="Ariel">Mervyn Greene Engineering have been in business for almost 30 years. We work on
+					all aspects of steel
 					work - from
 					the design stage, all the way through to erection of the finished product.
 					Our fabrication is done in house by MGE employees to ensure of the highest standard.<br><br>
