--- a/fuelTankStands.html
+++ b/fuelTankStands.html
@@ -29,7 +29,7 @@
 		<ul class="links">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="fuelTankStands.html">Fuel Tank Stands</a></li>
-			<li><a href="safetyProducts.htmlgi">Safety Products</a></li>
+			<li><a href="safetyProducts.html">Safety Products</a></li>
 		</ul>
 	</nav>
 
@@ -51,6 +51,15 @@
 				<br><br>
 				Our tank stands are used in farm yards, construction sites, machinery yards and domestically. Slide out stairs
 				ensure safety and ease of access. The Full Service Unit comes equipped with a power washer, air compressor, grease guns and equipment, storage area for tools and related items.
+				<br><br>
+
+				<div class="image-grid">
+					<a href="#" class="image"><img src="images/fuelTankStandDouble.png" alt="" /></a>
+					<a href="#" class="image"><img src="images/IMG_0503.JPG" alt="" /></a>
+					<a href="#" class="image"><img src="images/IMG_0513.JPG" alt="" /></a>
+					<a href="#" class="image"><img src="images/IMG_0508.JPG" alt="" /></a>
+				</div>
+
 				<br><br>
 				We make stands to cater for one, two or three diesel tanks. Delivery or collection are available. Stands
 				can be made for your specific tank and height requirements. Call us to discuss your best option.
