--- a/fuelTankStands.html
+++ b/fuelTankStands.html
@@ -46,19 +46,14 @@
 					alt="" /></a>
 
 			<p><br><br>
-				MGE developed Fuel Tank Stands for diesel tanks, domestic oil tanks. We also build based on your specific
-				requirements. All tank stands are galvanised and include fittings and necessary equiptment. 
+				MGE developed Fuel Tank Stands for diesel tanks, domestic oil tanks. We also build based on your
+				specific
+				requirements. All tank stands are galvanised and include fittings and necessary equiptment.
 				<br><br>
-				Our tank stands are used in farm yards, construction sites, machinery yards and domestically. Slide out stairs
-				ensure safety and ease of access. The Full Service Unit comes equipped with a power washer, air compressor, grease guns and equipment, storage area for tools and related items.
-				<br><br>
-
-				<div class="image-grid">
-					<a href="#" class="image"><img src="images/fuelTankStandDouble.png" alt="" /></a>
-					<a href="#" class="image"><img src="images/IMG_0503.JPG" alt="" /></a>
-					<a href="#" class="image"><img src="images/IMG_0513.JPG" alt="" /></a>
-					<a href="#" class="image"><img src="images/IMG_0508.JPG" alt="" /></a>
-				</div>
+				Our tank stands are used in farm yards, construction sites, machinery yards and domestically. Slide out
+				stairs
+				ensure safety and ease of access. The Full Service Unit comes equipped with a power washer, air
+				compressor, grease guns and equipment, storage area for tools and related items.
 
 				<br><br>
 				We make stands to cater for one, two or three diesel tanks. Delivery or collection are available. Stands
@@ -67,9 +62,54 @@
 				This product was featured in the <a class="w3-large w3-text-green"
 					href="https://www.independent.ie/business/farming/fuel-tank-stand-tops-tullamore-26764445.html">Irish
 					Independent</a> and the Irish Farmers Journal after winning awards for innovation and
-				safety.</p>
-			<iframe width="100%" height="600px" margin="auto 0" src="https://www.youtube.com/embed/nKHeRURSIUY?start=5" frameborder="0"
-				allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+				safety.
+			</p>
+
+
+			<section id="one" class="wrapper style1">
+				<div class="inner">
+					<article class="feature right">
+						<span class="image"><img alt="" /></span>
+						<div class="content">
+							<h2>Full Service Unit:</h2>
+
+							<p>
+								The Award winning Multi-safe Fuel Tank Stand is the answer to gravity driven or pump
+								driven fuel tanks for Farms, building sites, transport and Fuel companies.
+								<br><br>
+								It allows the Fuel tank to safely be housed off the ground and importantely allow for
+								safe refuelling using the slide away stairs. No more use of ladders or unsafe practices
+								with the health and saftey answer to a common problem.
+							</p>
+
+							<h3>Includes</h3>
+							<ul>
+								<li>Power Washer</li>
+								<li>Compressor</li>
+								<li>Refuelling equipment</li>
+								<li>Slide-out Stairs</li>
+							</ul>
+
+							<div class="toCentrePictures">
+								<img src="images/28795473_191445898122407_8012040059354087424_n.jpg"><br>
+								<img src="images/28871147_191445831455747_4008582089338257408_n.jpg"><br>
+								<img src="images/28871909_191503788116618_1613661509945131008_n.jpg"><br>
+								<img src="images/28951359_191445781455752_7411114129655595008_n.jpg"><br>
+							</div>
+
+						</div>
+					</article>
+
+
+
+
+
+				</div>
+			</section>
+
+
+			<iframe width="100%" height="600px" margin="auto 0" src="https://www.youtube.com/embed/nKHeRURSIUY?start=5"
+				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 				allowfullscreen></iframe>
 
 		</div>
@@ -85,7 +125,6 @@
 			</ul>
 			<ul class="copyright">
 				<li>&copy; Mervyn Greene Engineering 2020</li>
-				<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
 			</ul>
 		</div>
 	</footer>
