Final touches. Adding the page with recent jobs.

--- a/fuelTankStands.html
+++ b/fuelTankStands.html
@@ -30,6 +30,8 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="fuelTankStands.html">Fuel Tank Stands</a></li>
 			<li><a href="safetyProducts.html">Safety Products</a></li>
+			<li><a href="recentProjects.html">Recent Projects</a></li>
+			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
 
@@ -93,24 +95,43 @@
 							<div class="toCentrePictures">
 								<img src="images/28795473_191445898122407_8012040059354087424_n.jpg"><br>
 								<img src="images/28871147_191445831455747_4008582089338257408_n.jpg"><br>
-								<img src="images/28871909_191503788116618_1613661509945131008_n.jpg"><br>
 								<img src="images/28951359_191445781455752_7411114129655595008_n.jpg"><br>
 							</div>
+							<br>
+							<br>
+
+
+							<h2>Double/Triple Tank Stand</h2>
+							<p>Ideal for Farms, Construction sites and Machinery Yards.</p>
+							<div class="toCentrePictures">
+								<img src="images/28871909_191503788116618_1613661509945131008_n.jpg"><br>
+							</div>
+							<br>
+							<br>
+
+							<h2>Domestic Oil Tank Stand</h2>
+							<p>Ideal for homes, schools and offices.</p>
+							<div class="toCentrePictures">
+								<img src="images/Mervyn_Greene_Product_Shoot_March_2017-21_transparent.jpg"><br>
+							</div>
+
+							<br>
+							<br>
 
 						</div>
 					</article>
-
-
-
-
+					<iframe width="100%" height="600px" margin="auto 0"
+						src="https://www.youtube.com/embed/nKHeRURSIUY?start=5" frameborder="0"
+						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
 
 				</div>
 			</section>
 
 
-			<iframe width="100%" height="600px" margin="auto 0" src="https://www.youtube.com/embed/nKHeRURSIUY?start=5"
+			<!-- <iframe width="100%" height="600px" margin="auto 0" src="https://www.youtube.com/embed/nKHeRURSIUY?start=5"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-				allowfullscreen></iframe>
+				allowfullscreen></iframe> -->
 
 		</div>
 	</section>
