--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 			<li><a href="index.html">Mervyn Greene Engineering</a></li>
 			<li><a href="fuelTankStands.html">Fuel Tank Stands</a></li>
 			<li><a href="safetyProducts.html">Safety Products</a></li>
+			<li><a href="recentProjects.html">Recent Projects</a></li>
+			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
 
@@ -66,7 +68,6 @@
 
 	<section id="one" class="wrapper style1">
 		<div class="inner">
-
 
 			<article class="feature right">
 				<span class="image"><img src="images/Mervyn_Greene_Product_Shoot_March_2017-26 copy.jpg"
@@ -131,6 +132,18 @@
 				</div>
 			</article>
 
+			<article class="feature right">
+				<span class="image"><img src="images/farmShed.jpg"
+						alt="" /></span>
+				<div class="content">
+					<h2>Farm</h2>
+					<p>
+						MGE farm buildings are custom built to your requirements and the highest standard. Call us today to discuss how we can make the best solution for you. 
+					</p>
+			
+				</div>
+			</article>
+
 		</div>
 	</section>
 
@@ -157,11 +170,11 @@
 	<section id="three" class="wrapper style3 special">
 		<div class="inner">
 			<header class="major narrow	">
-				<p font-family="Ariel">Mervyn Greene Engineering have been in business for almost 30 years. We work on
+				<p font-family="Ariel">Mervyn Greene Engineering have been in business for almost 30 years. We carry out
 					all aspects of steel
 					work - from
 					the design stage, all the way through to erection of the finished product.
-					Our fabrication is done in house by MGE employees to ensure of the highest standard.<br><br>
+					Our fabrication is done in house by MGE employees to ensure the highest standard.<br><br>
 					We conform to CE marking regulations 1090-1:2009+A1:2011. MGE Products, Multi-Safe Tank Stands,
 					Structural Steel
 					Manufacturing and Factory Processes are also CE certified.
