--- a/safetyProducts.html
+++ b/safetyProducts.html
@@ -7,66 +7,115 @@
 <html>
 
 <head>
-	<title>Mervyn Greene Engineering</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+    <title>Mervyn Greene Engineering</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+    <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 </head>
 
 <body>
 
-	<!-- Header -->
-	<header id="header">
-		<h1><a href="index.html">Mervyn Greene Engineering</a></h1>
-		<a href="#nav">Menu</a>
-	</header>
+    <!-- Header -->
+    <header id="header">
+        <h1><a href="index.html">Mervyn Greene Engineering</a></h1>
+        <a href="#nav">Menu</a>
+    </header>
 
-	<!-- Nav -->
-	<nav id="nav">
-		<ul class="links">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="fuelTankStands.html">Fuel Tank Stands</a></li>
-			<li><a href="safetyProducts.html">Safety Products</a></li>
-		</ul>
-	</nav>
+    <!-- Nav -->
+    <nav id="nav">
+        <ul class="links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="fuelTankStands.html">Fuel Tank Stands</a></li>
+            <li><a href="safetyProducts.html">Safety Products</a></li>
+            <li><a href="recentProjects.html">Recent Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
-	<!-- Main -->
-	<section id="main" class="wrapper">
-		<div class="container">
+    <!-- Main -->
+    <section id="main" class="wrapper">
+        <div class="container">
 
-			<header class="major special">
-				<h2>Safety Products</h2>
-				<p>MGE's award winning Fuel Tank Stand Range</p>
-			</header>
+            <header class="major special">
+                <h2>Safety Products</h2>
+                <p>MGE's award winning Fuel Tank Stand Range</p>
+            </header>
 
 
-		</div>
-	</section>
+            <section id="one" class="wrapper style1">
+                <div class="inner">
 
-	<!-- Footer -->
-	<footer id="footer">
-		<div class="inner">
-			<ul class="icons">
-				<li><a href="https://www.facebook.com/MGEProduct/" class="icon fa-facebook">
-						<span class="label">Facebook</span>
-					</a></li>
-			</ul>
-			<ul class="copyright">
-				<li>&copy; Mervyn Greene Engineering 2020</li>
-				<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
-			</ul>
-		</div>
-	</footer>
 
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/skel.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="assets/js/main.js"></script>
+                    <article class="feature right">
+                        <span class="image"><img src="images/walkway.png" alt="" /></span>
+                        <div class="content">
+                            <h2>Walkways & Footbridges</h2>
+
+                            <p>
+
+                            </p>
+
+                        </div>
+                    </article>
+
+                    <article class="feature left">
+                        <span class="image"><img src="images/IMG_0727.JPG" alt="" /></span>
+                        <div class="content">
+                            <h2>Stairs & Ladders</h2>
+
+                            <p>
+
+                            </p>
+
+                        </div>
+                    </article>
+
+                    <article class="feature right">
+                        <span class="image"><img src="images/Workshop01.jpg" alt="" /></span>
+                        <div class="content">
+                            <h2>Custom Solutions</h2>
+
+                            <p>
+                                Innovative Safety Solutions save lives.
+                                <br><br>
+                                At Mervyn Greene Engineering, we deliver the
+                                best possible safety solutions to suit your needs.
+                            </p>
+
+                        </div>
+                    </article>
+
+                </div>
+            </section>
+
+        </div>
+    </section>
+
+
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            <ul class="icons">
+                <li><a href="https://www.facebook.com/MGEProduct/" class="icon fa-facebook">
+                        <span class="label">Facebook</span>
+                    </a></li>
+            </ul>
+            <ul class="copyright">
+                <li>&copy; Mervyn Greene Engineering 2020</li>
+                <!-- <li>Design: <a href="http://templated.co">TEMPLATED</a>.</li> -->
+            </ul>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/skel.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+    <script src="assets/js/main.js"></script>
 
 </body>
 
